wall_ports new refabrish

--- a/core/sh/templates/edifice/create.html
+++ b/core/sh/templates/edifice/create.html
@@ -9,7 +9,7 @@
 {% endblock extra_refs %}
 
 {% block form %}
-<button id="toggle-office-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtro para Localidad <i class="fas fa-search"></i></button>
+<button id="toggle-office-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtro de Localidades <i class="fas fa-search"></i></button>
 <div id="filter-office-cards" class="d-none">
   <div class="row">
   <!-- Tarjeta Filtros Geográficos -->
