finishing wall_ports, Again, tryng to pass a dark-mode

--- a/templates/body.html
+++ b/templates/body.html
@@ -2,7 +2,7 @@
 
 {% block body %}
   <!-- Site wrapper -->
-  <div class="wrapper">
+  <div class="wrapper dark-mode">
     {% include 'navbar.html' %}
     {% include 'sidebar.html' %}
 
