--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- Main Sidebar Container -->
-<aside class="main-sidebar main-sidebar-custom sidebar-light-primary elevation-4">
+<aside class="main-sidebar main-sidebar-custom sidebar-daerk-info elevation-4">
   <!-- Brand Logo -->
   <a href="{% url 'index' %}" class="brand-link">
     <img src="{% static 'img/sh_logo.svg' %}" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
