--- a/core/sh/templates/wall_port/delete.html
+++ b/core/sh/templates/wall_port/delete.html
@@ -2,7 +2,7 @@
 
 {% block entity_to_delete %}
 <div class="card-body table-responsive">
-  <div class="alert alert-danger alert-dismissible">
+  <div class="alert bg-custom-danger alert-dismissible">
     <h5><i class="icon fas fa-triangle-exclamation"></i> Atención!</h5>
       Estas por eliminar el registro Nro: Estas por eliminar el registro Nro: {{object.id}}, {{del_title}} {{object.wall_port}}, de la Oficina: {{object.office.office}}.
       Recorrido del cable del puerto al rack:
