--- a/templates/delete.html
+++ b/templates/delete.html
@@ -19,7 +19,7 @@
     <div class="card-footer">
 
       {% block add_button %}
-      <button type="submit" class="btn btn-danger" id="{{btn_add_id}}">
+      <button type="submit" class="btn bg-custom-danger" id="{{btn_add_id}}">
         <i class="fas fa-circle-check"></i> Si, eliminar
       </button>
       <a href="{{ list_url }}" type="submit" class="btn btn-primary" id="{{btn_add_id}}">
