--- a/templates/list.html
+++ b/templates/list.html
@@ -14,7 +14,7 @@
 {% block content %}
 
   <div class="card card-default mb-2">
-    <div class="card-header bg-primary">
+    <div class="card-header bg-custom-primary">
       <h3 class="card-title">
       <i class="{{nav_icon}}"></i>
       {{title}}
