--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -245,7 +245,7 @@
   </div>
   <!-- /.sidebar -->
 
-  <div class="sidebar-custom">
+  <div class="sidebar-custom bg-dark">
     <a href="#" class="btn btn-link"><i class="fas fa-cogs"></i></a>
     <a href="#" class="btn btn-secondary hide-on-collapse pos-right">Help</a>
   </div>
