--- a/core/sh/templates/dev_model/delete.html
+++ b/core/sh/templates/dev_model/delete.html
@@ -2,7 +2,7 @@
 
 {% block entity_to_delete %}
 <div class="card-body table-responsive">
-  <div class="alert alert-danger alert-dismissible">
+  <div class="alert bg-custom-danger alert-dismissible">
     <h5><i class="icon fas fa-triangle-exclamation"></i> Atención!</h5>
       Estas por eliminar el registro Nro: {{object.id}}, {{del_title}} {{object.dev_model}}, de la Marca: {{object.brand}}, Tipo de Dispositivo: {{object.dev_type}}
     {% for dependency in object.dependency.all %}
