--- a/core/sh/templates/device/delete.html
+++ b/core/sh/templates/device/delete.html
@@ -2,7 +2,7 @@
 
 {% block entity_to_delete %}
 <div class="card-body table-responsive">
-  <div class="alert alert-danger alert-dismissible">
+  <div class="alert bg-custom-danger alert-dismissible">
     <h5><i class="icon fas fa-triangle-exclamation"></i> Atención!</h5>
       <p>
         Estas por eliminar el registro Nro: {{object.id}}, {{del_title}} {{object.dev_model}}, S/N°: {{object.serial_n}}.
