--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
             </a>
         </div>
         <div class="col-lg-6 col-md-6 mb-4 d-flex justify-content-center">
-            <a href="#" class="btn btn-danger btn-lg d-flex flex-column align-items-center justify-content-center" style="width: 200px; height: 200px;">
+            <a href="#" class="btn bg-custom-danger btn-lg d-flex flex-column align-items-center justify-content-center" style="width: 200px; height: 200px;">
                 <i class="fas fa-desktop fa-2x"></i>
                 <span class="mt-2">Computadoras</span>
             </a>
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="col-lg-6 col-md-6 mb-4 d-flex justify-content-center">
-            <a href="#" class="btn btn-warning btn-lg d-flex flex-column align-items-center justify-content-center" style="width: 200px; height: 200px;">
+            <a href="#" class="btn bg-custom-warning btn-lg d-flex flex-column align-items-center justify-content-center" style="width: 200px; height: 200px;">
                 <i class="fas fa-tv fa-2x"></i>
                 <span class="mt-2">Monitores</span>
             </a>
