--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 
-<footer class="main-footer mt-2">
-  <div class="float-right d-none d-sm-block">
+<footer class="main-footer bg-dark">
+  <div class="float-right d-none d-sm-block bg-dark">
     <b>Version</b> 3.2.0
   </div>
   <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong> All rights reserved.
