--- a/core/sh/templates/office/create.html
+++ b/core/sh/templates/office/create.html
@@ -10,26 +10,42 @@
 {% endblock extra_refs %}
 
 {% block form %}
+<button id="toggle-office-filters" class="btn {{filter_btn_color}}" type="button"> Filtros para Edificio, Dependencia y Ubicación <i class="fas fa-search"></i></button>
+<div id="filter-office-cards" class="d-none">
+  <div class="row">
+    <div class="container">
+    <!-- Tarjeta Filtros Geográficos -->
+      <div class="card mt-1">
+        <div class="card-header {{bg_color}}">
+          Filtros para Dependencias y Edificios
+        </div>
+        <div class="card-body row">
+          <div class="form-group col-12">
+            <label for="id_province">Provincia:</label>
+            {{ form.province }}
+            {% if form.province.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.province.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
 
-<div class="form-group">
-  <label for="id_province">Provincia:</label>
-  {{ form.province }}
-  {% if form.province.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.province.errors|join:"<br>" }}
+          <div class="form-group col-12">
+            <label for="id_location">Localidad:</label>
+            {{ form.location }}
+            {% if form.location.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.location.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+          <small class="form-text text-muted">* Para filtrar Dependencias, Edificios y Ubicación de Oficinas</small>
+        </div>
+      </div>
+    </div>
   </div>
-  {% endif %}
 </div>
-<div class="form-group">
-  <label for="id_location">Localidad:</label>
-  {{ form.location }}
-  {% if form.location.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.location.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-<div class="form-group">
+<div class="form-group mt-2">
   <label for="id_dependency">Dependencia:</label>
   {{ form.dependency }}
   {% if form.dependency.errors %}
@@ -38,6 +54,7 @@
   </div>
   {% endif %}
 </div>
+
 <div class="form-group">
   <label for="id_edifice">Edificio:</label>
   {{ form.edifice }}
@@ -47,15 +64,17 @@
   </div>
   {% endif %}
 </div>
+
 <div class="form-group">
-  <label for="id_loc_type">Locación:</label>
+  <label for="id_loc">Ubicación de Oficina:</label>
   {{ form.loc }}
   {% if form.loc.errors %}
   <div class="invalid-feedback d-block">
     {{ form.loc.errors|join:"<br>" }}
   </div>
-{% endif %}
+  {% endif %}
 </div>
+
 <div class="form-group">
   <label for="id_office">Oficina:</label>
   {{ form.office }}
@@ -65,6 +84,7 @@
   </div>
   {% endif %}
 </div>
+
 <div class="form-group">
   <label for="id_description">Descripción:</label>
   {{ form.description }}
@@ -79,4 +99,5 @@
 
 {% block form_scripts %}
   <script src="{% static 'office/js/form.js' %}"></script>
+  <script src="{% static 'js/filters.js' %}"></script>
 {% endblock form_scripts %}
