--- a/core/sh/templates/office_loc/create.html
+++ b/core/sh/templates/office_loc/create.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2.min.css' %}">
 <link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2-bootstrap.min.css' %}">
 <script src="{% static 'lib/select2-4.1.0-rc.0/dist/js/select2.full.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/select2_dark.css' %}">
 {% endblock extra_refs %}
 
 {% block form %}
@@ -20,7 +21,7 @@
         </div>
         <div class="card-body row">
           <div class="form-group col-12">
-            <label for="id_brand">Provincia:</label>
+            <label for="id_province">Provincia:</label>
             {{ form.province }}
             {% if form.province.errors %}
             <div class="invalid-feedback d-block">
