--- a/core/sh/templates/switch/create.html
+++ b/core/sh/templates/switch/create.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2.min.css' %}">
 <link rel="stylesheet" href="{% static 'lib/select2-4.1.0-rc.0/dist/css/select2-bootstrap.min.css' %}">
 <script src="{% static 'lib/select2-4.1.0-rc.0/dist/js/select2.full.min.js' %}"></script>
+<link rel="stylesheet" href="{% static 'css/select2_dark.css' %}">
 {% endblock extra_refs %}
 
 {% block form %}
@@ -53,57 +54,76 @@
 {% endif %}
 </div>
 
-<div class="form-group">
-  <label for="id_province">Provincia:</label>
-  {{ form.province }}
-  {% if form.province.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.province.errors|join:"<br>" }}
+<button id="toggle-office-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para oficinas <i class="fas fa-search"></i></button>
+<div id="filter-office-cards" class="d-none">
+  <div class="row">
+    <div class="container">
+    <!-- Tarjeta Filtros Geográficos -->
+      <div class="card mt-1">
+        <div class="card-header {{bg_color}}">
+          Filtros por Ubicacion
+        </div>
+        <div class="card-body row">
+          <div class="form-group col-12">
+            <label for="id_brand">Provincia:</label>
+            {{ form.province }}
+            {% if form.province.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.province.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-12">
+            <label for="id_model">Localidad:</label>
+            {{ form.location }}
+            {% if form.location.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.location.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_edifice">Edificio:</label>
+            {{ form.edifice }}
+            {% if form.edifice.help_text %}
+            <small class="form-text text-muted">{{form.edifice.help_text}}</small>
+            {% endif %}
+            {% if form.edifice.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.edifice.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_loc">Dependencia:</label>
+            {{ form.dependency }}
+            {% if form.dependency.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.dependency.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_loc">Locacion de Oficina:</label>
+            {{ form.loc }}
+            {% if form.loc.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.loc.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+          <small class="form-text text-muted">* Recomendado para filtrar oficinas</small>
+        </div>
+      </div>
+    </div>
   </div>
-  {% endif %}
 </div>
 
-<div class="form-group">
-  <label for="id_location">Localidad:</label>
-  {{ form.location }}
-  {% if form.location.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.location.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_dependency">Dependencia:</label>
-  {{ form.dependency }}
-  {% if form.dependency.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.dependency.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_edifice">Edificio:</label>
-  {{ form.edifice }}
-  {% if form.edifice.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.edifice.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
-  <label for="id_loc">Locacion de la oficina:</label>
-  {{ form.loc }}
-  {% if form.loc.errors %}
-  <div class="invalid-feedback d-block">
-    {{ form.loc.errors|join:"<br>" }}
-  </div>
-  {% endif %}
-</div>
-
-<div class="form-group">
+<div class="form-group mt-3">
   <label for="id_office">Oficina:</label>
   {{ form.office }}
   {% if form.office.errors %}
@@ -113,31 +133,87 @@
   {% endif %}
 </div>
 
-<div class="form-group">
-  <label for="id_rack"> Rack:</label>
-  {{ form.rack }}
-  {% if form.rack.errors %}
+<h5 class="text-center"> Seleccione de donde ingresa la señal al switch</h5>
+
+<button id="toggle-ports-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para puertos <i class="fas fa-search"></i></button>
+<div id="filter-port-cards" class="d-none">
+  <div class="row">
+    <div class="container">
+      <div class="card my-1">
+
+        <div class="card-header {{bg_color}}">
+          Filtrar por Conexión
+        </div>
+        <div class="card-body row">
+          <div class="form-group col-12">
+            <label for="id_rack">Rack:</label>
+            {{ form.rack }}
+            {% if form.rack.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.rack.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_switch">Switch de Ingreso:</label>
+            {{ form.switch }}
+            {% if form.switch.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.switch.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-6">
+            <label for="id_patchera">Patchera de Ingreso:</label>
+            {{ form.patchera }}
+            {% if form.patchera.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.patchera.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+          <small class="form-text text-muted">* Seleccionar Oficina para realizar el filtrado de puertos</small>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="form-group mt-3">
+  <label for="id_wall_port_in">Puerto de la Pared de Ingreso:</label>
+  {{ form.wall_port_in }}
+  {% if form.wall_port_in.errors %}
   <div class="invalid-feedback d-block">
-    {{ form.rack.errors|join:"<br>" }}
+    {{ form.wall_port_in.errors|join:"<br>" }}
   </div>
   {% endif %}
 </div>
 
 <div class="form-group">
-  <label for="id_switch_rack_pos">Posición en el Rack:</label>
-  {{ form.switch_rack_pos }}
-  {% if form.switch_rack_pos.help_text %}
-  <small class="form-text text-muted">{{form.switch_rack_pos.help_text}}</small>
-  {% endif %}
-  {% if form.switch_rack_pos.errors %}
+  <label for="id_switch_port_in">Puerto del Switch de Ingreso:</label>
+  {{ form.switch_port_in }}
+  {% if form.switch_port_in.errors %}
   <div class="invalid-feedback d-block">
-    {{ form.switch_rack_pos.errors|join:"<br>" }}
+    {{ form.switch_port_in.errors|join:"<br>" }}
   </div>
   {% endif %}
 </div>
 
+<div class="form-group">
+  <label for="id_patch_port_in">Puerto de la Patchera de Ingreso:</label>
+  {{ form.patch_port_in }}
+  {% if form.patch_port_in.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.patch_port_in.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+<small class="form-text text-muted">* Seleccione un único puerto, solo desde el que ingresa directamente la conexión al Switch</small>
 {% endblock form %}
 
 {% block form_scripts %}
   <script src="{% static 'switch/js/form.js' %}"></script>
+  <script src="{% static 'js/filters.js' %}"></script>
 {% endblock form_scripts %}
