--- a/core/sh/templates/switch/create.html
+++ b/core/sh/templates/switch/create.html
@@ -132,8 +132,11 @@
   </div>
   {% endif %}
 </div>
-
-<h5 class="text-center"> Seleccione de donde ingresa la señal al switch</h5>
+<hr class="my-2 border-light">
+<div class="container">
+  <h5 class="text-center display-6">Seleccione el Puerto desde el cual ingresa la señal al switch</h5>
+</div>
+<hr class="my-2 border-light">
 
 <button id="toggle-ports-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para puertos <i class="fas fa-search"></i></button>
 <div id="filter-port-cards" class="d-none">
