--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -68,11 +68,11 @@ input[type="text"],
 .form-control{
   background-color: #343a40 !important;
   color: #f8f9fa !important;
-  border: 1px solid #495057 !important;
+  border: 1px solid #6c757d !important;
 }
 
 input[type="text"]::placeholder {
-  color: #6c757d !important
+  color: #a1a9b0 !important
 }
 
 input[type="text"]::selection {
@@ -81,9 +81,9 @@ input[type="text"]::selection {
 }
 
 input[type="text"]:focus {
-  background-color: #343a40 !important; /* Fondo oscuro al enfocar */
-  color: #f8f9fa !important; /* Texto claro */
-  border-color: #0dcaf0 !important; /* Borde de enfoque */
+  background-color: #343a40 !important;
+  color: #f8f9fa !important;
+  border-color: #0dcaf0 !important;
 }
 
 .ui-autocomplete {
