--- a/core/sh/templates/switch/create.html
+++ b/core/sh/templates/switch/create.html
@@ -54,6 +54,16 @@
 {% endif %}
 </div>
 
+<div class="form-group">
+  <label for="id_rack">Rack:</label>
+  {{ form.rack }}
+  {% if form.rack.errors %}
+  <div class="invalid-feedback d-block">
+    {{ form.rack.errors|join:"<br>" }}
+  </div>
+  {% endif %}
+</div>
+
 <button id="toggle-office-filters" class="btn {{filter_btn_color}} mb-1" type="button"> Filtros para oficinas <i class="fas fa-search"></i></button>
 <div id="filter-office-cards" class="d-none">
   <div class="row">
@@ -132,6 +142,7 @@
   </div>
   {% endif %}
 </div>
+
 <hr class="my-2 border-light">
 <div class="container">
   <h5 class="text-center display-6">Seleccione el Puerto desde el cual ingresa la señal al switch</h5>
@@ -148,32 +159,43 @@
           Filtrar por Conexión
         </div>
         <div class="card-body row">
+
           <div class="form-group col-12">
-            <label for="id_rack">Rack:</label>
-            {{ form.rack }}
-            {% if form.rack.errors %}
+            <label for="id_office_ports">Oficina:</label>
+            {{ form.office_ports }}
+            {% if form.office_ports.errors %}
             <div class="invalid-feedback d-block">
-              {{ form.rack.errors|join:"<br>" }}
+              {{ form.office_ports.errors|join:"<br>" }}
+            </div>
+            {% endif %}
+          </div>
+
+          <div class="form-group col-12">
+            <label for="id_rack_ports">Rack:</label>
+            {{ form.rack_ports }}
+            {% if form.rack_ports.errors %}
+            <div class="invalid-feedback d-block">
+              {{ form.rack_ports.errors|join:"<br>" }}
             </div>
             {% endif %}
           </div>
 
           <div class="form-group col-6">
-            <label for="id_switch">Switch de Ingreso:</label>
-            {{ form.switch }}
-            {% if form.switch.errors %}
+            <label for="id_switch_ports">Switch de Ingreso:</label>
+            {{ form.switch_ports }}
+            {% if form.switch_ports.errors %}
             <div class="invalid-feedback d-block">
-              {{ form.switch.errors|join:"<br>" }}
+              {{ form.switch_ports.errors|join:"<br>" }}
             </div>
             {% endif %}
           </div>
 
           <div class="form-group col-6">
             <label for="id_patchera">Patchera de Ingreso:</label>
-            {{ form.patchera }}
-            {% if form.patchera.errors %}
+            {{ form.patchera_ports }}
+            {% if form.patchera_ports.errors %}
             <div class="invalid-feedback d-block">
-              {{ form.patchera.errors|join:"<br>" }}
+              {{ form.patchera_ports.errors|join:"<br>" }}
             </div>
             {% endif %}
           </div>
