--- a/core/sh/templates/switch/list.html
+++ b/core/sh/templates/switch/list.html
@@ -12,8 +12,9 @@
   <th scope="col" style="width: 5%;">Id</th>
   <th scope="col" style="width: 15%;">Marca</th>
   <th scope="col" style="width: 15%;">Nro. de Serie</th>
-  <th scope="col" style="width: 15%;">Cantidad de puertos</th>
-  <th scope="col" style="width: 20%;">Rack</th>
+  <th scope="col" style="width: 5%;">Cantidad de puertos</th>
+  <th scope="col" style="width: 15%;">Oficina</th>
+  <th scope="col" style="width: 15%;">Rack</th>
   <th scope="col" style="width: 15%;">Posicion en el Rack</th>
   <th scope="col" style="width: 15%;">Opciones</th>
 
