--- a/core/sh/templates/device/create.html
+++ b/core/sh/templates/device/create.html
@@ -102,7 +102,7 @@
         </div>
         <div class="card-body row">
           <div class="form-group col-12">
-            <label for="id_brand">Provincia:</label>
+            <label for="id_province">Provincia:</label>
             {{ form.province }}
             {% if form.province.errors %}
             <div class="invalid-feedback d-block">
@@ -112,7 +112,7 @@
           </div>
 
           <div class="form-group col-12">
-            <label for="id_model">Localidad:</label>
+            <label for="id_location">Localidad:</label>
             {{ form.location }}
             {% if form.location.errors %}
             <div class="invalid-feedback d-block">
@@ -135,7 +135,7 @@
           </div>
 
           <div class="form-group col-6">
-            <label for="id_loc">Dependencia:</label>
+            <label for="id_dependency">Dependencia:</label>
             {{ form.dependency }}
             {% if form.dependency.errors %}
             <div class="invalid-feedback d-block">
