--- a/core/sh/templates/office_loc/create.html
+++ b/core/sh/templates/office_loc/create.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="form-group col-12">
-            <label for="id_model">Localidad:</label>
+            <label for="id_location">Localidad:</label>
             {{ form.location }}
             {% if form.location.errors %}
             <div class="invalid-feedback d-block">
@@ -84,5 +84,6 @@
 {% endblock form %}
 
 {% block form_scripts %}
+  <script src="{% static 'js/filters.js' %}"></script>
   <script src="{% static 'office_loc/js/form.js' %}"></script>
 {% endblock form_scripts %}
