--- a/core/sh/templates/movements/list.html
+++ b/core/sh/templates/movements/list.html
@@ -10,12 +10,13 @@
 {% block columns %}
 
   <th scope="col" style="width: 5%;">Id</th>
-  <th scope="col" style="width: 15%;">Dispositivo</th>
-  <th scope="col" style="width: 20%;">Movimiento</th>
-  <th scope="col" style="width: 25%;">Tecnico</th>
-  <th scope="col" style="width: 25%;">Fecha</th>
-  <th scope="col" style="width: 25%;">Inusmo Utilizado</th>
-  <th scope="col" style="width: 10%;">Opciones</th>
+  <th scope="col" style="width: 20%;">Dispositivo</th>
+  <th scope="col" style="width: 15%;">Usuario/Oficina</th>
+  <th scope="col" style="width: 15%;">Movimiento</th>
+  <th scope="col" style="width: 10%;">Tecnico</th>
+  <th scope="col" style="width: 5%;">Fecha</th>
+  <th scope="col" style="width: 5%;">Inusmo Utilizado</th>
+  <th scope="col" style="width: 15%;">Opciones</th>
 
 {% endblock columns %}
 
