--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -231,7 +231,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a href="{% url 'sh:movements_list' %}" class="nav-link">
+              <a href="{% url 'sh:move_list' %}" class="nav-link">
                 <i class="fa-solid fa-arrows-turn-to-dots"></i>
                 <p>Movimientos</p>
               </a>
